--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.15.4",
+    "mongoose": "^4.12.3",
     "nodemon": "^1.12.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
