--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.15.4",
+    "mongodb": "^2.2.33",
     "mongoose": "^4.12.3",
     "nodemon": "^1.12.0",
     "passport": "^0.4.0",
