--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.15.4",
     "mongodb": "^2.2.33",
     "mongoose": "^4.12.3",
     "nodemon": "^1.12.0",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "stripe": "^5.6.1"
   }
 }
